# Albercan-Backend

./: .docker-compose.yaml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
albercan_backend/: asgi.py  settings.py  urls.py  wsgi.py
albercan_backend/static/css/: base.css  navbar.css
albercan_backend/templates/: base.html  navbar.html
authentication/: forms.py  urls.py
authentication/templates/authentication/: login_page.html
envs/: .env.template
people/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
people/migrations/: 0001_initial.py  0002_person_marital_status.py  0003_person_birthday_alter_person_phone_number_and_more.py
people/templates/people/: members.html
pet/: admin.py  filters.py  models.py  tests.py  urls.py  views.py
pet/migrations/: 0001_initial.py  0002_race_remove_pet_age_pet_birthday_alter_pet_name_and_more.py  0003_rename_race_breed_remove_pet_race_pet_breed.py  0004_alter_pet_breed_alter_pet_owner.py  0005_alter_pet_owner.py  0006_alter_pet_owner.py  0007_pet_gender_pet_is_neutered.py  0008_pet_picture.py  0009_alter_pet_picture.py
pet/static/pet/css/: blog_section.css  footer.css  mail_subscription.css  main_carousel.css  steps_to_adopt.css  (+1 more)
pet/templates/pet/: blog_section.html  footer.html  mail_subscription.html  main_carousel.html  main_page.html  our_pets_section.html  secondary_carousel.html  steps_to_adopt.html
structure/: admin.py  models.py
structure/migrations/: 0001_initial.py
utils/: datetools.py
(+1 files in other folders)
