[tool.poetry]
name = "albercan-backend"
version = "0.1.0"
description = ""
authors = ["Fer-Bar <linofernando2703@gmail.com>"]
readme = "README.md"
packages = [{include = "albercan_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
pillow = "^10.1.0"
pytz = "^2024.1"
python-dateutil = "^2.8.2"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
